--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,32 @@ button:hover {
   justify-content: space-between;
   margin-top: 20px;
 }
+
+.stars, .twinkling, .clouds {
+  position: absolute;
+  display: block;
+  top: 0; bottom: 0;
+  left: 0; right: 0;
+  width: 100%; height: 100%;
+}
+
+.stars {
+  z-index: 0;
+  background: #000 url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png') repeat top center;
+}
+
+.twinkling {
+  z-index: 1;
+  background: transparent url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/twinkling.png') repeat top center;
+  animation: move-twink-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+  from {background-position: 0 0;}
+  to {background-position: -10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+  from {background-position: 0 0;}
+  to {background-position: 10000px 0;}
+}
