--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ button:hover {
   margin-top: 20px;
 }
 
-.stars, .twinkling, .clouds {
+.stars, .twinkling{
   position: absolute;
   display: block;
   top: 0; bottom: 0;
@@ -103,9 +103,4 @@ button:hover {
 @keyframes move-twink-back {
   from {background-position: 0 0;}
   to {background-position: -10000px 5000px;}
-}
-
-@keyframes move-clouds-back {
-  from {background-position: 0 0;}
-  to {background-position: 10000px 0;}
 }
