--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body, html {
   text-align: center;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Orbitron', sans-serif;
   margin-bottom: 20px;
 }
